--- a/package.json
+++ b/package.json
@@ -1,48 +1,35 @@
 {
   "name": "gatsby-starter-default",
-  "private": false,
+  "private": true,
   "description": "A simple starter to get up and developing quickly with Gatsby",
-  "version": "1.0.0",
-  "author": "Jacob Neterer <jacobrneterer@gmail.com",
+  "version": "0.1.0",
+  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
-    "@sanity/block-content-to-react": "^2.0.7",
-    "gatsby": "^2.20.8",
-    "gatsby-image": "^2.2.44",
-    "gatsby-plugin-manifest": "^2.3.3",
-    "gatsby-plugin-offline": "^3.1.2",
-    "gatsby-plugin-postcss": "^2.2.0",
-    "gatsby-plugin-react-helmet": "^3.1.24",
-    "gatsby-plugin-sass": "^2.2.0",
-    "gatsby-plugin-sharp": "^2.4.13",
-    "gatsby-plugin-typescript": "^2.3.0",
-    "gatsby-source-filesystem": "^2.1.56",
-    "gatsby-source-sanity": "^5.0.6",
-    "gatsby-transformer-sharp": "^2.4.3",
-    "node-sass": "^4.13.1",
+    "gatsby": "^3.0.1",
+    "gatsby-plugin-gatsby-cloud": "^2.0.0",
+    "gatsby-plugin-image": "^1.0.0",
+    "gatsby-plugin-manifest": "^3.0.0",
+    "gatsby-plugin-offline": "^4.0.0",
+    "gatsby-plugin-react-helmet": "^4.0.0",
+    "gatsby-plugin-sharp": "^3.0.0",
+    "gatsby-source-filesystem": "^3.0.0",
+    "gatsby-transformer-sharp": "^3.0.0",
     "prop-types": "^15.7.2",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-helmet": "^5.2.1"
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-helmet": "^6.1.0"
   },
   "devDependencies": {
-    "@types/node": "^13.9.5",
-    "@types/react": "^16.9.27",
-    "@types/react-dom": "^16.9.5",
-    "prettier": "^1.19.1",
-    "tailwindcss": "^1.2.0"
+    "prettier": "2.2.1"
   },
   "keywords": [
-    "gatsby",
-    "sanity",
-    "tailwindcss",
-    "typescript",
-    "sass"
+    "gatsby"
   ],
-  "license": "MIT",
+  "license": "0BSD",
   "scripts": {
     "build": "gatsby build",
     "develop": "gatsby develop",
-    "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
+    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
     "start": "npm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
@@ -50,9 +37,9 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/jneterer/gatsby-developer-portfolio"
+    "url": "https://github.com/gatsbyjs/gatsby-starter-default"
   },
   "bugs": {
-    "url": "https://github.com/jneterer/gatsby-developer-portfolio/issues"
+    "url": "https://github.com/gatsbyjs/gatsby/issues"
   }
 }
