--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "gatsby-plugin-react-helmet": "^4.0.0",
     "gatsby-plugin-sharp": "^3.0.0",
     "gatsby-source-filesystem": "^3.0.0",
+    "gatsby-source-firestore-easy": "^1.0.0",
     "gatsby-source-sanity": "^6.0.5",
     "gatsby-transformer-sharp": "^3.0.0",
     "prop-types": "^15.7.2",
