--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "0.9.9",
   "author": "Darren Grafton <darren.cactus@gmail.com>",
   "dependencies": {
+    "classnames": "^2.3.1",
     "framer-motion": "^4.1.17",
     "gatsby": "^3.0.1",
     "gatsby-plugin-gatsby-cloud": "^2.0.0",
