--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "version": "0.9.9",
   "author": "Darren Grafton <darren.cactus@gmail.com>",
   "dependencies": {
+    "@fontsource/libre-baskerville": "^4.4.5",
+    "@fontsource/source-sans-pro": "^4.4.5",
     "classnames": "^2.3.1",
     "framer-motion": "^4.1.17",
     "gatsby": "^3.0.1",
