--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "gatsby-plugin-gatsby-cloud": "^2.0.0",
     "gatsby-plugin-image": "^1.0.0",
     "gatsby-plugin-manifest": "^3.0.0",
+    "gatsby-plugin-netlify-cms": "^5.14.0",
     "gatsby-plugin-offline": "^4.0.0",
     "gatsby-plugin-react-helmet": "^4.0.0",
     "gatsby-plugin-robots-txt": "^1.6.2",
@@ -21,6 +22,7 @@
     "gatsby-source-filesystem": "^3.0.0",
     "gatsby-transformer-json": "^3.5.0",
     "gatsby-transformer-sharp": "^3.0.0",
+    "netlify-cms-app": "^2.15.49",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-cookie": "^4.0.3",
