--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gatsby-plugin-sitemap": "^4.2.0",
     "gatsby-source-filesystem": "^3.0.0",
     "gatsby-transformer-json": "^3.5.0",
+    "gatsby-transformer-remark": "^4.11.0",
     "gatsby-transformer-sharp": "^3.0.0",
     "netlify-cms-app": "^2.15.49",
     "prop-types": "^15.7.2",
