--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   "dependencies": {
     "@fontsource/libre-baskerville": "^4.4.5",
     "@fontsource/source-sans-pro": "^4.4.5",
+    "autoprefixer": "^10.3.7",
     "classnames": "^2.3.1",
+    "daisyui": "^1.14.4",
     "framer-motion": "^4.1.17",
     "gatsby": "^3.0.1",
     "gatsby-plugin-gatsby-cloud": "^2.0.0",
@@ -15,6 +17,7 @@
     "gatsby-plugin-manifest": "^3.0.0",
     "gatsby-plugin-netlify-cms": "^5.3.0",
     "gatsby-plugin-offline": "^4.0.0",
+    "gatsby-plugin-postcss": "^4.14.0",
     "gatsby-plugin-react-helmet": "^4.0.0",
     "gatsby-plugin-robots-txt": "^1.6.2",
     "gatsby-plugin-sharp": "^3.0.0",
@@ -24,12 +27,14 @@
     "gatsby-transformer-remark": "^4.11.0",
     "gatsby-transformer-sharp": "^3.0.0",
     "netlify-cms-app": "^2.15.49",
+    "postcss": "^8.3.9",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-cookie": "^4.0.3",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
-    "react-icons": "^4.2.0"
+    "react-icons": "^4.2.0",
+    "tailwindcss": "^2.2.17"
   },
   "devDependencies": {
     "prettier": "2.3.0"
