--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "framer-motion": "^4.1.17",
     "gatsby": "^3.0.1",
     "gatsby-plugin-gatsby-cloud": "^2.0.0",
+    "gatsby-plugin-google-gtag": "^3.14.0",
     "gatsby-plugin-image": "^1.0.0",
     "gatsby-plugin-manifest": "^3.0.0",
     "gatsby-plugin-netlify-cms": "^5.3.0",
